# 104JB

./: .gitignore  handoff_20260705_resume_os_implementation.md  pyproject.toml
.codex/skills/resume-os/: SKILL.md
.codex/skills/resume-os/agents/: openai.yaml
.codex/skills/resume-os/references/: workflow.md
.work/RESUME-OS-IMPL-001/: brief.md  context_manifest.md  result.md  status.md
.work/RESUME-OS-IMPL-001/evidence/: README.md  final-verification.txt  synthetic-acceptance.txt
.work/current/: brief.md  context_manifest.md  handoff.md  result.md  status.md
docs/acceptance/: resume-os-mvp-checklist.md
docs/superpowers/plans/: 2026-07-05-resume-os-capability-synthesis-implementation.md  2026-07-05-resume-os-codex-mvp-implementation.md
docs/superpowers/specs/: 2026-07-03-resume-os-codex-mvp-design.md  2026-07-05-resume-os-capability-synthesis-design.md
src/resume_os/: __init__.py  cli.py  database.py  evaluation.py  evidence.py  export_104.py  merge.py  models.py  profiles.py  proposals.py  sources.py
tests/: test_acceptance.py  test_cli_flow.py  test_database.py  test_export_104.py  test_merge.py  test_profiles.py  test_proposals.py  test_skill_contract.py  test_sources.py
tests/fixtures/: 104_public_sample.html  friend_candidate.json  matt_candidate.json
